add Elasticsearch search for notices and approvals